<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RideSharing</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Welcome_to_Ridesharing">Welcome to Ridesharing!</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_ride_sharing_application">RideSharingApplication</string>
    <string name="LoginID">ID</string>
    <string name="LoginPassword">Password</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="FullName">Full Name (firstname sirname)</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="District">District/City</string>
    <string name="Email">Email Address</string>
    <string name="Phonenum">Phone Number</string>
    <string name="Sex">Sex:</string>
    <string name="About">About</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="Find">Find...</string>
    <string name="Map">Map</string>
    <string name="myPage">My Page</string>
    <string name="topUp">Top-up</string>
    <string name="Feedback">Give Feedback!</string>
    <string name="title_activity_find">FindActivity</string>
    <string name="Rider">Rider</string>
    <string name="Driver">Driver</string>
    <string name="title_activity_find_rider">FindRiderActivity</string>
    <string name="title_activity_find_driver">FindDriverActivity</string>
    <string name="title_activity_my_page">MyPageActivity</string>
    <string name="Balance">Balance:</string>
    <string name="Rating">Feedback Rating:</string>
    <string name="History">View History</string>
    <string name="title_activity_top_up">TopUpActivity</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="title_activity_map">MapActivity</string>

</resources>
