<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/ID"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Welcome_to_Ridesharing"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ID"
        android:layout_alignRight="@+id/ID"
        android:layout_below="@+id/ID"
        android:layout_gravity="center"
        android:layout_marginTop="66dp"
        android:text="@string/Login" 
    	android:onClick="gotoLogin" />

    <Button
        android:id="@+id/AboutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/RegisterButton"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="96dp"
        android:onClick="gotoAbout"
        android:text="@string/About" />

    <Button
        android:id="@+id/RegisterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/LoginButton"
        android:layout_centerVertical="true"
        android:onClick="gotoRegister"
        android:text="@string/Register" />

</RelativeLayout>
